ecmascript/parser/tests/typescript-errors/tsc/types/specifyingTypes/predefinedTypes/objectTypesWithPredefinedTypesAsName2/input.ts.stderr
error: Expected ident
 --> $DIR/tests/typescript-errors/tsc/types/specifyingTypes/predefinedTypes/objectTypesWithPredefinedTypesAsName2/input.ts:3:7
  |
3 | class void {} // parse error unlike the others
  |       ^^^^

